
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int) ;
 int fflush (int ) ;
 int fprintf (int ,char*,char*) ;
 int herror (char*) ;
 int perror (char*) ;
 int stderr ;
 int strcmp (char*,int ) ;
 int zb_host ;

void
OutputErr(char *msg, int type)
{

        if(!type)
        {
                fprintf(stderr,"%s", msg);
                fflush(stderr);
        }
        else if(type==1)
        {
                if(!strcmp(msg, zb_host))
                {
                        herror(msg);
                }
                else
                {
                        perror(msg);
                }
        }

        exit(1);
}
